--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,56 +1,14 @@
 @import 'utils/variables';
+@import 'utils/mixins';
 @import 'components/type';
 @import 'components/nav';
+@import 'components/footer';
 
-:root {
-  --rotate: -167.16deg;
-}
+@import 'pages/home';
 
 body {
   background-color: #000;
   min-height: 200vh;
   margin: 0;
   font-family: Lexend;
-}
-
-.hero {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 90vh;
-    width: 90vw;
-    background: radial-gradient(50% 28.59% at 50% 100%, #082078 0%, #03060e 100%);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 64px;
-  }
-  position: relative;
-  &__h1 {
-    color: #d8e3ec;
-    font-feature-settings: "ss01" on;
-
-    /* Desktop/H1 */
-    font-family: Lexend;
-    font-size: 7.75rem;
-    font-style: normal;
-    font-weight: 900;
-    line-height: 110%; /* 8.525rem */
-    letter-spacing: -0.2325rem;
-    margin: 0;
-    margin-bottom: 64px;
-  }
-  &__span {
-    background: linear-gradient(90deg, #72bce1 0%, #4d8ceb 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 22px;
-    font-family: Lexend;
-  }
 }
