--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -21,33 +21,64 @@
   box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25), 
               inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(5px);
-  width: 35rem;
-  height: 12rem;
+  width: 35%;
+  height: 20%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(-167.16deg);
   z-index: 1000;
   &__container {
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, auto);
     align-items: center;
+    gap: 8px;
+            
     width: 100%;
     height: 100%;
     opacity: 0;
   }
   &__left {
     display: flex;
+    align-items: center;
     gap: 8px;
   }
   &__name {
-    color: white;
+    color: $text-color;
   }
   &__logo {
-    height: 20px;
-    width: 20px;
-    background-color: white;
-    border-radius: 50%;
+    height: 29px;
+    width: 29px;
+    background-color: $text-color;
+    border-radius: 50px;
+    transition: all 0.5s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+      width: calc(29px * 2);
+      padding: 0 8px;
+      &::after {
+        opacity: 1;
+        transition: all 0.5s ease;
+      }
+    }
+    &::after {
+      content: "Gabriel";
+      // position: absolute;
+      // left: 50%;
+      // transform: translateX(-50%);
+      // top: 0%;
+      font-size: 0.875rem;
+      color: #0b1530;
+      // opacity: 0.8;
+      opacity: 0;
+      transition: all 0.5s ease;
+    }
   }
   ul {
     list-style-type: none;
@@ -55,10 +86,11 @@
     gap: 2rem;
     margin: 0;
     padding: 0;
+    white-space: nowrap;
     li {
       a {
         text-decoration: none;
-        color: white;
+        color: $text-color;
         opacity: 60%;
         transition: all 0.5s ease;
         &:hover {
@@ -66,6 +98,12 @@
         }
       }
     }
+  }
+  &__middle {
+    border-left: 1px solid $text-color;
+    border-right: 1px solid $text-color;
+    padding: 0 3rem;
+    justify-self: center;
   }
   &__right {
     padding: 4px 16px;
@@ -75,6 +113,8 @@
     text-decoration: none;
     color: white;
     transition: all 0.5s ease;
+    justify-self: end;
+    align-self: center;
     &:hover {
       background: #1f397f;
       border: 1px solid #111e43;
