--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     height: 90vh;
     width: 90vw;
-    background: radial-gradient(100% 28.59% at 50% 100%, #082078 0%, hsl(224, 65%, 5%) 100%);
+    background: radial-gradient(75% 25% at 50% 100%, #082078 0%, hsl(224, 65%, 5%) 100%);
     border-radius: 64px;
   }
   &__h1 {
@@ -46,20 +46,15 @@
   min-height: 150vh;
   &__container {
     width: 50vw;
-    // margin: 0 auto;
     padding: 2rem;
     border-radius: 64px;
     border: 2px solid rgba(91, 106, 118, 0.5);
-    background: rgba(7, 32, 52, 0.5);
+    background: #07203480;
     box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25), 
                 inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(20px);
   }
   &__h2 {
-    // background: linear-gradient(90deg, #23439A 0%, #071B64 100%);
-    // background-clip: text;
-    // -webkit-background-clip: text;
-    // -webkit-text-fill-color: transparent;
     color: #d8e3ec;
     font-feature-settings: "ss01" on;
     font-family: Lexend;
@@ -67,8 +62,54 @@
     font-style: normal;
     font-weight: 900;
     line-height: 110%;
+    letter-spacing: 10%;
     margin: 0;
     margin-bottom: 64px;
     text-align: center;
+  }
+  &__cards {
+    width: 600%;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  &__card {
+    width: 20rem;
+    height: 30rem;
+    padding: 1rem;
+    border-radius: 48px;
+    border: 2px solid rgba(91, 106, 118, 0.5);
+    background: #07203480;
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25), 
+                inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(20px);
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    color: #d8e3ec;
+    font-family: Lexend;
+    font-size: 1.5rem;
+    font-weight: normal;
+    text-align: center;
+    &-img {
+      width: 100%;
+      height: 60%;
+      border-radius: 32px;
+      margin-bottom: 1rem;
+      background-color: #72bce1;
+    }
+    &-title {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    &-h3, &-year {
+      font-size: 31px;
+      margin: 0;
+      font-weight: 700;
+      color: #d8e3ec;
+    }
+    &-year {
+      font-weight: 300;
+    }
   }
 }
