--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,5 +1,3 @@
-$c-bg: #efefef;
-$c-alt: #e41612;
-$c-text: #444;
-
-$size-text: 18px;
+// Colors
+$text-color: #D8E3EC;
+$background-color: #0B1530;
