--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -4,36 +4,44 @@
   justify-content: center;
   align-items: center;
   position: relative;
+
   &__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 90vh;
+    height: 90dvh;
     width: 90vw;
     background: radial-gradient(75% 25% at 50% 100%, #082078 0%, hsl(224, 65%, 5%) 100%);
     border-radius: 64px;
+
+    @media screen and (max-width: 768px) {
+      width: 95vw;
+      height: 95vh;
+    }
   }
+
   &__h1 {
     color: #d8e3ec;
     font-feature-settings: "ss01" on;
     font-family: Lexend;
-    font-size: 7.75rem;
+    font-size: $h1-size;
     font-style: normal;
     font-weight: 900;
     line-height: 90%;
     letter-spacing: -2%;
     margin: 0;
-    margin-bottom: 64px;
+    margin-bottom: clamp(2rem, 1rem + 3.3333vw, 4rem);
     text-align: center;
     width: 90%;
   }
+
   &__span {
     background: linear-gradient(90deg, #72bce1 0%, #4d8ceb 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 22px;
+    font-size: $p-size;
     font-family: Lexend;
   }
 }
@@ -43,17 +51,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  min-height: 150vh;
+
+  // min-height: 150vh;
   &__container {
+    display: flex;
+    flex-direction: column;
     width: 50vw;
     padding: 2rem;
     border-radius: 64px;
     border: 2px solid rgba(91, 106, 118, 0.5);
-    background: #07203480;
-    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25), 
-                inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
+    background: #07203451;
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25),
+      inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(20px);
+    overflow-x: hidden;
   }
+
   &__h2 {
     color: #d8e3ec;
     font-feature-settings: "ss01" on;
@@ -62,54 +75,133 @@
     font-style: normal;
     font-weight: 900;
     line-height: 110%;
-    letter-spacing: 10%;
+    letter-spacing: 2%;
     margin: 0;
     margin-bottom: 64px;
     text-align: center;
   }
+
   &__cards {
     width: 600%;
+    height: 100%;
     display: flex;
+    gap: 2rem;
     flex-wrap: nowrap;
+    align-items: stretch;
+    // overflow-x: auto;
+
   }
+
   &__card {
-    width: 20rem;
-    height: 30rem;
+    width: 25vw;
     padding: 1rem;
     border-radius: 48px;
     border: 2px solid rgba(91, 106, 118, 0.5);
-    background: #07203480;
-    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25), 
-                inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
+    background: #2b3b4961;
     backdrop-filter: blur(20px);
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: .5rem;
     color: #d8e3ec;
     font-family: Lexend;
     font-size: 1.5rem;
     font-weight: normal;
     text-align: center;
+    transition: all 0.3s ease;
+    cursor: pointer;
+
+    &:hover {
+      background: #182749;
+    }
+
     &-img {
       width: 100%;
-      height: 60%;
+      aspect-ratio: 16 / 9;
       border-radius: 32px;
-      margin-bottom: 1rem;
-      background-color: #72bce1;
+      background-color: $text-color;
     }
+
     &-title {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-    &-h3, &-year {
+
+    &-h3,
+    &-year {
       font-size: 31px;
       margin: 0;
       font-weight: 700;
       color: #d8e3ec;
     }
+
     &-year {
       font-weight: 300;
+    }
+
+    &--top {
+      display: flex;
+      gap: 1rem;
+      flex-direction: column;
+    }
+
+    &--bottom {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
+
+  &__tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    padding: 1rem;
+    border: 2px solid rgba(91, 106, 118, 0.5);
+    border-radius: 32px;
+    background: #07203451;
+  }
+
+  &__tag {
+    background: #d8e3ec42;
+    color: $text-color;
+    padding: 0.5rem 1rem;
+    border-radius: 32px;
+    font-size: 1.2rem;
+    font-weight: 300;
+    transition: all 0.3s ease;
+    border: 2px solid rgba(91, 106, 118, 0.5);
+  }
+
+  &__links {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+    display: none;
+
+    &:hover {
+      display: flex;
+    }
+
+    a {
+      width: 100%;
+      height: 100%;
+      text-decoration: none;
+      color: #d8e3ec;
+      font-size: $p-size;
+      transition: all 0.3s ease;
+      padding: .5rem 1rem;
+      border-radius: 32px;
+      border: 2px solid rgba(91, 106, 118, 0.5);
+      background-color: #07203451;
+
+      &:hover {
+        background-color: #72bce1;
+        color: #0b1530;
+      }
     }
   }
 }
