--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,3 +1,6 @@
 // Colors
 $text-color: #D8E3EC;
 $background-color: #0B1530;
+
+$h1-size: clamp(4rem, 2.125rem + 6.25vw, 7.75rem);
+$p-size: clamp(1rem, 0.8125rem + 0.625vw, 1.375rem);
