--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -205,3 +205,30 @@
     }
   }
 }
+
+.about {
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50vw;
+    padding: 2rem;
+    border-radius: 64px;
+    border: 2px solid rgba(91, 106, 118, 0.5);
+    background: #07203451;
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25),
+      inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(20px);
+    margin-top: -100px; // Adjust as needed
+    margin-bottom: -100px; // Adjust as needed
+    overflow-x: hidden;
+
+    @media screen and (max-width: 768px) {
+      width: 90vw;
+      padding: 1rem;
+      margin-top: -50px; // Adjust for smaller screens
+      margin-bottom: -50px; // Adjust for smaller screens
+    }
+  }
+}
