--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -6,6 +6,28 @@
   left: 0;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+button {
+  // Reset button styles
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  padding: 0;
+  text-align: left;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+}
 
 .nav {
   display: flex;
@@ -26,8 +48,83 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) rotate(-167.16deg);
+  transform: translate(-50%, -50%) rotate(-167deg);
   z-index: 1000;
+  @media screen and (max-width: 768px) {
+    width: 50%;
+    height: 10%;
+    transform: translate(-50%, -50%) rotate(-167deg);
+    padding: 1rem;
+    border-radius: 4rem;
+  }
+  &__burger {
+    display: none;
+    @media screen and (max-width: 768px) {
+      display: block;
+      width: 2rem;
+      height: 2rem;
+      // background-color: $text-color;
+      // border-radius: 50%;
+      position: relative;
+      cursor: pointer;
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        width: 1.5rem;
+        height: 0.2rem;
+        background-color: white;
+        left: 0.25rem;
+        transition: all 0.3s ease;
+      }
+      &::before {
+        top: 0.5rem;
+      }
+      &::after {
+        bottom: 0.5rem;
+      }
+    }
+  }
+  &__mobile {
+    display: none;
+    @media screen and (max-width: 768px) {
+      display: flex;
+      width: 100%;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      transform: none;
+      border-radius: 0;
+      padding: 0.5rem;
+      z-index: 1001;
+      background: rgba(11, 21, 48, 0.25);
+      backdrop-filter: blur(5px);
+      transform: translateY(-100vh);
+    }
+    &--active {
+      transform: translateY(0);
+    }
+    &-ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      width: 100%;
+      height: 100%;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      li {
+        a {
+          text-decoration: none;
+          color: $text-color;
+          font-size: $h1-size;
+        }
+      }
+    }
+  }
   &__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -38,6 +135,10 @@
     width: 100%;
     height: 100%;
     opacity: 0;
+    @media screen and (max-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+    }
   }
   &__left {
     display: flex;
@@ -77,7 +178,7 @@
       transition: all 0.5s ease;
     }
   }
-  ul {
+  &__ul {
     list-style-type: none;
     display: flex;
     gap: 2rem;
@@ -101,6 +202,9 @@
     border-right: 1px solid $text-color;
     padding: 0 3rem;
     justify-self: center;
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
   }
   &__right {
     padding: 4px 16px;
@@ -116,6 +220,9 @@
       background: #1f397f;
       border: 1px solid #111e43;
       box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
+    }
+    @media screen and (max-width: 768px) {
+      display: none;
     }
   }
 }
