--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -16,8 +16,9 @@
     border-radius: 64px;
 
     @media screen and (max-width: 768px) {
-      width: 95vw;
-      height: 95vh;
+      width: 100vw;
+      height: 100vh;
+      border-radius: 0;
     }
   }
 
