--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -66,6 +66,10 @@
       inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(20px);
     overflow-x: hidden;
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      padding: 1rem;
+    }
   }
 
   &__h2 {
@@ -111,6 +115,9 @@
     text-align: center;
     transition: all 0.3s ease;
     cursor: pointer;
+    @media screen and (max-width: 768px) {
+      width: 90vw;
+    }
 
     &:hover {
       background: #182749;
