--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -118,6 +118,9 @@
     @media screen and (max-width: 768px) {
       width: 90vw;
     }
+    @media screen and (max-width: 1024px) {
+      width: 50vw;
+    }
 
     &:hover {
       background: #182749;
