--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -65,7 +65,8 @@
     box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25),
       inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(20px);
-    overflow-x: hidden;
+    overflow: hidden;
+
     @media screen and (max-width: 768px) {
       width: 100%;
       padding: 1rem;
@@ -87,14 +88,13 @@
   }
 
   &__cards {
-    width: 600%;
     height: 100%;
+    width: 100%;
     display: flex;
-    gap: 2rem;
-    flex-wrap: nowrap;
-    align-items: stretch;
-    // overflow-x: auto;
-
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    flex-wrap: wrap;
   }
 
   &__card {
@@ -102,25 +102,21 @@
     padding: 1rem;
     border-radius: 48px;
     border: 2px solid rgba(91, 106, 118, 0.5);
-    background: #2b3b4961;
+    background: rgba(43, 59, 73, 0.35);
     backdrop-filter: blur(20px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: .5rem;
-    color: #d8e3ec;
-    font-family: Lexend;
-    font-size: 1.5rem;
-    font-weight: normal;
-    text-align: center;
+    gap: 5rem;
+    color: $text-color;
     transition: all 0.3s ease;
-    cursor: pointer;
+
     @media screen and (max-width: 768px) {
       width: 90vw;
     }
 
     &:hover {
-      background: #182749;
+      background: rgba(43, 59, 73, 0.50);
     }
 
     &-img {
@@ -138,10 +134,10 @@
 
     &-h3,
     &-year {
-      font-size: 31px;
+      font-size: $h3-size;
       margin: 0;
       font-weight: 700;
-      color: #d8e3ec;
+      color: $text-color;
     }
 
     &-year {
@@ -153,34 +149,6 @@
       gap: 1rem;
       flex-direction: column;
     }
-
-    &--bottom {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-  }
-
-  &__tags {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: center;
-    padding: 1rem;
-    border: 2px solid rgba(91, 106, 118, 0.5);
-    border-radius: 32px;
-    background: #07203451;
-  }
-
-  &__tag {
-    background: #d8e3ec42;
-    color: $text-color;
-    padding: 0.5rem 1rem;
-    border-radius: 32px;
-    font-size: 1.2rem;
-    font-weight: 300;
-    transition: all 0.3s ease;
-    border: 2px solid rgba(91, 106, 118, 0.5);
   }
 
   &__links {
@@ -188,27 +156,24 @@
     justify-content: center;
     gap: 1rem;
     width: 100%;
-    display: none;
-
-    &:hover {
-      display: flex;
-    }
 
     a {
+      text-align: center;
       width: 100%;
       height: 100%;
       text-decoration: none;
-      color: #d8e3ec;
-      font-size: $p-size;
+      color: $text-color;
+      font-size: $nav-size;
       transition: all 0.3s ease;
-      padding: .5rem 1rem;
+      padding: 1rem;
       border-radius: 32px;
-      border: 2px solid rgba(91, 106, 118, 0.5);
-      background-color: #07203451;
+      border: 1px solid rgba(216, 227, 236, 0.50);
+      background: rgba(33, 40, 46, 0.10);
+      box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.25) inset;
+      backdrop-filter: blur(10px);
 
       &:hover {
-        background-color: #72bce1;
-        color: #0b1530;
+        background: rgba(33, 40, 46, 0.75);
       }
     }
   }
