--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,4 +3,7 @@ $text-color: #D8E3EC;
 $background-color: #0B1530;
 
 $h1-size: clamp(4rem, 2.125rem + 6.25vw, 7.75rem);
+$h2-size: clamp(2.8125rem, 2.5089rem + 1.5179vw, 3.875rem);
+$h3-size: clamp(1.4375rem, 1.2946rem + 0.7143vw, 1.9375rem);
 $p-size: clamp(1rem, 0.8125rem + 0.625vw, 1.375rem);
+$nav-size: clamp(0.6875rem, 0.5982rem + 0.4464vw, 1rem);
