--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -103,7 +103,8 @@
 
 
   &__card {
-    // width: 25vw;
+    max-width: 25vw;
+    height: 80%;
     padding: 1rem;
     border-radius: 48px;
     border: 2px solid rgba(91, 106, 118, 0.5);
@@ -118,11 +119,14 @@
 
     @media screen and (max-width: 768px) {
       border-radius: 24px;
+      max-width: 50%;
       width: 50%;
       gap: 1rem;
+      height: auto;
     }
 
     @media screen and (max-width: 480px) {
+      max-width: 100%;
       width: 100%;
     }
 
@@ -176,43 +180,44 @@
         flex-direction: row;
       }
     }
-  }
 
-  &__links {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    width: 100%;
-
-    @media screen and (max-width: 768px) {
-      gap: .5rem;
-    }
-
-    a {
-      white-space: nowrap;
-      text-align: center;
+    &-links {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
       width: 100%;
-      height: 100%;
-      text-decoration: none;
-      color: $text-color;
-      font-size: $nav-size;
-      transition: all 0.3s ease;
-      padding: 1rem;
-      border-radius: 32px;
-      border: 1px solid rgba(216, 227, 236, 0.50);
-      background: rgba(33, 40, 46, 0.10);
-      box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.25) inset;
-      backdrop-filter: blur(10px);
-
-      &:hover {
-        background: rgba(33, 40, 46, 0.75);
-      }
 
       @media screen and (max-width: 768px) {
-        padding: 0.5rem;
+        gap: .5rem;
+      }
+
+      a {
+        white-space: nowrap;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+        color: $text-color;
+        font-size: $nav-size;
+        transition: all 0.3s ease;
+        padding: 1rem;
+        border-radius: 32px;
+        border: 1px solid rgba(216, 227, 236, 0.50);
+        background: rgba(33, 40, 46, 0.10);
+        box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.25) inset;
+        backdrop-filter: blur(10px);
+
+        &:hover {
+          background: rgba(33, 40, 46, 0.75);
+        }
+
+        @media screen and (max-width: 768px) {
+          padding: 0.5rem;
+        }
       }
     }
   }
+
 }
 
 .about {
