--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -51,7 +51,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  height: 100vh;
 
   &__container {
     display: flex;
