--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -54,6 +54,10 @@
   justify-content: center;
   height: 100vh;
 
+  @media screen and (max-width: 768px) {
+    align-items: flex-end;
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
