--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -223,6 +223,46 @@
     }
   }
 
+  &__buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    // height: 100%;
+    gap: 1rem;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      gap: 0.5rem;
+      margin-top: 1rem;
+    }
+  }
+
+  &__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: $text-color;
+    font-size: $nav-size;
+    transition: all 0.3s ease;
+    padding: 1rem;
+    border-radius: 32px;
+    border: 1px solid rgba(216, 227, 236, 0.50);
+    background: rgba(33, 40, 46, 0.10);
+    box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.25) inset;
+    backdrop-filter: blur(10px);
+
+    &:hover {
+      background: rgba(33, 40, 46, 0.75);
+    }
+
+    @media screen and (max-width: 768px) {
+      padding: 0.5rem;
+      font-size: $nav-size;
+    }
+  }
+
 }
 
 .about {
