Added swiperjs to navigate in the projects

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,6 +3,7 @@
 @import 'components/type';
 @import 'components/nav';
 @import 'components/footer';
+@import 'components/swiper';
 
 @import 'pages/home';
 
