--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -118,7 +118,7 @@
     justify-content: space-between;
     gap: 5rem;
     color: $text-color;
-    transition: all 0.3s ease;
+    // transition: all 0.3s ease;
     box-sizing: border-box;
 
     @media screen and (max-width: 768px) {
