Adds flex-end alignment to the last button in the navigation

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -197,6 +197,10 @@ button {
           opacity: 100%;
         }
       }
+
+      &:last-child {
+        justify-content: flex-end;
+      }
     }
   }
 
