--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $text-color: #D8E3EC;
 $background-color: #0B1530;
+$border-color: rgba(91, 106, 118, 0.5);
 
 $h1-size: clamp(4rem, 2.125rem + 6.25vw, 7.75rem);
 $h2-size: clamp(2.8125rem, 2.5089rem + 1.5179vw, 3.875rem);
