--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -175,12 +175,19 @@
 }
 
 .about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+
   &__container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-start;
     justify-content: center;
-    width: 50vw;
+    gap: 2rem;
+    width: 65vw;
     padding: 2rem;
     border-radius: 64px;
     border: 2px solid rgba(91, 106, 118, 0.5);
@@ -188,15 +195,55 @@
     box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25),
       inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(20px);
-    margin-top: -100px; // Adjust as needed
-    margin-bottom: -100px; // Adjust as needed
-    overflow-x: hidden;
 
     @media screen and (max-width: 768px) {
+      flex-direction: column;
       width: 90vw;
+      height: auto;
       padding: 1rem;
-      margin-top: -50px; // Adjust for smaller screens
-      margin-bottom: -50px; // Adjust for smaller screens
+      border-radius: 2rem;
+
+    }
+  }
+
+  &__img {
+    width: 40%;
+    height: auto;
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      height: 30vh;
+
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 2rem;
+      aspect-ratio: 1 / 1;
+
+      @media screen and (max-width: 768px) {
+        border-radius: 1rem;
+
+      }
+    }
+  }
+
+  &__desc {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    flex: 1;
+
+    p {
+      color: $text-color;
+      font-size: $p-size;
+      font-weight: 300;
+      line-height: 150%;
+      width: 100%;
+      margin: 0;
     }
   }
 }
