--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -2,18 +2,27 @@
   $border-thickness: 2px,
   $blur: 20px,
   $padding: 2rem,
-  $box-shadow: true) {
+  $box-shadow: true,
+  $button: false) {
   padding: $padding;
   border-radius: $border-radius;
   border: $border-thickness solid rgba(91, 106, 118, 0.5);
-  background: rgba(7, 32, 52, 0.31);
+  background: rgba(7, 32, 52, 0.30);
+  backdrop-filter: blur($blur);
+  transition: background 0.3s ease-in-out;
+
+  @if $button {
+    background: #0b1530;
+
+    &:hover {
+      background: #1f397f;
+    }
+  }
 
   @if $box-shadow {
     box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25),
       inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
   }
-
-  backdrop-filter: blur($blur);
 
   @media screen and (max-width: 768px) {
     padding: 1rem;
