--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -183,13 +183,8 @@
     justify-content: center;
     gap: 2rem;
     width: 65vw;
-    padding: 2rem;
-    border-radius: 64px;
-    border: 2px solid rgba(91, 106, 118, 0.5);
-    background: #07203451;
-    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25),
-      inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(20px);
+
+    @include glass-container(64px, 2px, 20px, 2rem);
 
     @media screen and (max-width: 768px) {
       flex-direction: column;
