--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -122,6 +122,10 @@
       aspect-ratio: 16 / 9;
       border-radius: 32px;
       background-color: $text-color;
+
+      @media screen and (max-width: 768px) {
+        border-radius: 16px;
+      }
     }
 
     &-title {
