--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -27,7 +27,7 @@
   @media screen and (max-width: 768px) {
     padding: 1rem;
     border-radius: $border-radius / 2;
-    width: calc(100% - $border-thickness * 2);
+    // width: calc(100% - $border-thickness * 2);
     height: auto;
     overflow: hidden;
   }
