--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,9 +7,9 @@
 
 @import 'pages/home';
 
-html {
-  scroll-behavior: smooth;
-}
+// html {
+//   scroll-behavior: smooth;
+// }
 
 body {
   background-color: #000;
