--- a/src/styles/pages/_credits.scss
+++ b/src/styles/pages/_credits.scss
@@ -1,5 +1,50 @@
 .credits {
-  background: radial-gradient(75% 25% at 50% 100%, #082078 0%, hsl(224, 65%, 5%) 100%);
-  min-height: 100vh;
   color: $text-color;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  &__background {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: radial-gradient(75% 25% at 50% 100%, #082078 0%, hsl(224, 65%, 5%) 100%);
+    width: 100%;
+    height: 100%;
+    height: 100vh
+  }
+
+  &__container {
+    @include glass-container(48px, 2px, 20px, 2rem, true);
+    z-index: 1;
+  }
+
+  &__h1 {
+    font-size: $h1-size;
+    margin: 0;
+    margin-bottom: 3rem;
+  }
+
+  &__h2 {
+    font-size: $h2-size;
+    margin: 0;
+    margin-bottom: 2rem;
+  }
+
+  &__text,
+  li {
+    font-size: $p-size;
+    margin-bottom: 2rem;
+    line-height: 1.5;
+  }
+
+  li {
+    margin-bottom: 1rem;
+  }
+
+  a {
+    color: $text-color;
+  }
 }
