--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -78,6 +78,10 @@ button {
       transform: translate(0, 0);
       border-radius: 0;
       padding: 1rem;
+      border-top: 0px;
+      border-left: 0px;
+      border-right: 0px;
+      border-bottom: 2px solid rgba(91, 106, 118, 0.5);
     }
 
     // tablet
@@ -177,7 +181,7 @@ button {
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 1rem;
+      gap: 3rem;
       width: 100%;
       height: 100%;
       list-style-type: none;
