--- a/src/styles/components/_type.scss
+++ b/src/styles/components/_type.scss
@@ -2,6 +2,6 @@
   font-family: 'Lexend';
   font-style: normal;
   font-display: swap;
-  src: url(../../assets/font/Lexend-VariableFont_wght.ttf) format('truetype');
+  src: url(../assets/font/Lexend-VariableFont_wght.ttf) format('truetype');
   font-weight: 100 900;
 }
