--- a/src/styles/pages/_case.scss
+++ b/src/styles/pages/_case.scss
@@ -58,6 +58,11 @@
         width: 100%;
         border-radius: 2rem;
         object-fit: contain;
+
+        @media screen and (max-width: 768px) {
+          border-radius: 1rem;
+
+        }
       }
     }
 
@@ -98,6 +103,8 @@
 
         @media screen and (max-width: 768px) {
           width: 100%;
+          border-radius: 1rem;
+          object-fit: fill;
         }
       }
     }
